--- a/main.css
+++ b/main.css
@@ -3,41 +3,42 @@
 @import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* --- Estilos Gerais e Mobile-First (Base para todas as telas) --- */
 body {
     background-color: #1c2a3a;
     font-family: "Montserrat", sans-serif;
     background-image: url('/images/wallpaper2.png');
-    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
+    overflow-x: hidden; /* Evita rolagem horizontal indesejada */
 }
 
 header {
-    background-color: #0f141de1;
+    background-color: #0f141d56;
     padding: 10px;
-    margin: 10px;
+    margin: 0;
 }
 
 header > p {
-    background-color: #0f141de1;
+    background-color: #0f141d73;
     color: #d7e5ff;
     font-family: "Montserrat", sans-serif;
-    font-size: 20px;
-    max-width: 700px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 30px;
+    font-size: 16px;
+    max-width: 90%;
+    padding: 10px;
     margin: auto;
     text-align: center;
+    box-sizing: border-box;
 }
 
 header > h1 {
     font-family: "MedievalSharp", cursive;
-    font-size: 3em;
+    font-size: 2.5em;
     color: #d1ba6a;
     text-align: center;
     transition: color 0.3s ease-in-out;
+    padding-bottom: 10px;
 }
 
 header > h1:hover {
@@ -46,10 +47,11 @@ header > h1:hover {
 
 nav {
     background-color: #d1ba6a;
-    padding: 3px;
+    padding: 5px;
     box-shadow: 5px 3px 7px 1px rgba(0, 0, 0, 0.22);
     font-size: large;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
@@ -57,12 +59,12 @@ nav {
 nav > a {
     font-family: "Montserrat", sans-serif;
     color: #0f141d;
-    padding: 7px;
-    padding-left: 10px;
+    padding: 5px 8px;
     border-radius: 3px;
     font-weight: bold;
     text-decoration: none;
     transition: 0.5s;
+    white-space: nowrap;
 }
 
 nav > a:hover {
@@ -71,20 +73,20 @@ nav > a:hover {
 }
 
 main {
-    background-color: #8cb3fbe1;
-    padding: 5px;
-    margin: 60px;
-    margin-top: 40px;
+    background-color: #9dbdf9df;
+    padding: 10px; /* Padding ajustado para mobile */
+    margin: 20px; /* Margem lateral ajustada para mobile */
+    margin-top: 20px;
     border-radius: 5px;
     box-shadow: 4px 4px 9px 0px #000000;
 }
 
 main p {
-    margin: 15px 30px;
+    margin: 10px 15px; /* Margens laterais reduzidas para mobile */
     text-align: justify;
     text-indent: 20px;
-    font-size: 1em;
-    line-height: 2em;
+    font-size: 0.9em; /* Font size ligeiramente reduzido para mobile */
+    line-height: 1.8em; /* Line height ajustado para melhor leitura */
 }
 
 main strong {
@@ -93,13 +95,13 @@ main strong {
 }
 
 section {
-    background-color: #e0e7f565;
+    background-color: #e0e7f521;
     padding: 8px;
 }
 
 #casas-texto > h1 {
     font-family: "MedievalSharp", cursive;
-    font-size: 2em;
+    font-size: 1.8em;
     color: #1c2a3a;
     font-weight: bold;
     text-align: center;
@@ -108,10 +110,10 @@ section {
 #casas-texto > p {
     color: #0e1218;
     font-family: "Montserrat", sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     text-align: center;
-    padding: 8px;
-    margin: 15px;
+    padding: 5px;
+    margin: 10px;
 }
 
 #casas-texto p a {
@@ -124,22 +126,22 @@ section {
 }
 
 #casas-texto p a:link,
-    p a:visited {
-        color:#0d3c13;
-        text-decoration: none;
-        font-weight: bold;
-    }
+p a:visited {
+    color:#0d3c13;
+    text-decoration: none;
+    font-weight: bold;
+}
 
 #casas-imagens {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
 #casas-imagens img {
-    width: 95%;
-    margin: 1px;
-    margin-left: 5px;
+    width: 90%; /* Ajustado para ocupar mais espaço em mobile */
+    margin: 10px auto; /* Centraliza imagens individualmente e adiciona margem vertical */
+    display: block; /* Garante que margin: auto funcione */
     transition: transform 0.3s ease-in-out;
 }
 
@@ -149,68 +151,61 @@ section {
 
 article > h2 {
     font-family: "MedievalSharp", cursive;
-    font-size: 2em;
+    font-size: 1.8em;
     text-align: center;
     background-color:#1c2a3a;
     color: #d1ba6a;
     padding: 10px;
-    margin-top: 50px;
+    margin-top: 30px;
     border-radius: 5px;
 }
 
 section {
     text-align: center;
-    font-size: 1.2em;
+    font-size: 1em;
 }
 
-#grifinoria img {
-    max-width: 100%;
+#grifinoria img, #lufalufa img, #corvinal img, #sonserina img {
+    max-width: 90%; /* Ajusta para mobile para evitar scroll horizontal */
     height: auto;
-}
-
-#lufalufa img {
-    max-width: 100%;
-    height: auto;
-}
-
-#corvinal img {
-    max-width: 100%;
-    height: auto;
-}
-
-#sonserina img {
-    max-width: 80%;
-    height: auto;
+    margin: 15px auto; /* Centraliza e adiciona margem */
+    display: block;
 }
 
 div.video {
     background-color:#d1ba6a;
     border-radius: 0px 0px 5px 5px;
-    margin: 0px -5px 0px -5px;
-    margin-bottom: -5px;
-    padding: 10px;
-    padding-bottom: 41%;
+    margin: 0px -10px -10px -10px; /* Margens negativas para esticar até a borda do main */
     position: relative;
+    padding-bottom: 56.25%; /* Proporção 16:9 (altura do vídeo) */
+    height: 0; /* Zera a altura para padding-bottom definir */
+    overflow: hidden; /* Oculta qualquer transbordamento */
 }
 
 div.video > iframe {
     position: absolute;
-    top: 13%;
-    left: 20%;
-    width: 60%;
-    height: 80%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-div.video h1 {
+.titulovideo {
     font-family: "MedievalSharp", cursive;
-    font-size: 3em;
+    font-size: 1.5em; /* Reduzido para não competir com o espaço do vídeo */
     color:#0d3c13;
     text-align: center;
-    transition: color 0.3s ease-in-out;
+    padding: 15px 0; /* Adicionado padding para separá-lo do conteúdo */
+    margin: 10px;
+    position: relative;
+    left: 0;
+    width: 92%;
+    z-index: 2; /* Garante que fique acima do iframe */
 }
 
+
 footer {
-    font-size: 1em;
+    font-size: 0.8em;
     font-family: "MedievalSharp", cursive;
     background-color: #0f141d;
     color: #A6955A;
@@ -229,8 +224,102 @@ footer > p a {
 }
 
 footer > p a:link,
-    p a:visited {
-        color:#d1ba6a;
-        text-decoration: none;
-        font-weight: bold;
+footer > p a:visited {
+    color:#d1ba6a;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+/* --- Media Queries para Telas Maiores (Desktops, Tablets) --- */
+@media (min-width: 768px) {
+    header {
+        margin: 10px; /* Restaura margem lateral para telas maiores */
     }
+
+    header > p {
+        font-size: 20px; /* Tamanho original para telas maiores */
+        max-width: 700px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 30px;
+    }
+
+    header > h1 {
+        font-size: 3em; /* Tamanho original para telas maiores */
+    }
+
+    nav {
+        padding: 3px;
+    }
+
+    nav > a {
+        padding: 7px 10px; /* Padding original para links */
+    }
+
+    main {
+        padding: 5px;
+        margin: 60px; /* Restaura margem lateral para telas maiores */
+        margin-top: 40px;
+    }
+
+    main p {
+        text-align: center;
+        margin: 15px 30px; /* Margens originais para telas maiores */
+        font-size: 1em;
+        line-height: 2em;
+    }
+
+    #casas-texto > h1 {
+        font-size: 2em; /* Tamanho original para telas maiores */
+    }
+
+    #casas-texto > p {
+        text-align: center;
+        font-size: 20px; /* Tamanho original para telas maiores */
+    }
+
+    #casas-imagens {
+        flex-wrap: nowrap; /* Volta a exibir imagens em linha em telas maiores */
+    }
+
+    #casas-imagens img {
+        width: 95%; /* Tamanho original para telas maiores */
+        margin: 1px 5px; /* Margem original */
+    }
+
+    article > h2 {
+        font-size: 2em; /* Tamanho original para telas maiores */
+        margin-top: 50px;
+    }
+
+    section {
+        font-size: 1.2em; /* Tamanho original para telas maiores */
+    }
+
+    #grifinoria img, #lufalufa img, #corvinal img, #sonserina img {
+        max-width: 80%; /* Tamanho original */
+    }
+
+    div.video {
+        margin: 0px -5px 0px;
+        margin-bottom: -5px;
+        padding-bottom: 41%; /* Proporção original, talvez 56.25% seja melhor para 16:9 */
+    }
+
+    div.video > iframe {
+        top: 13%; /* Posição original */
+        left: 20%;
+        width: 60%;
+        height: 80%;
+    }
+
+    .titulovideo {
+        font-size: 3em; /* Tamanho original para telas maiores */
+        position: initial; /* Remove posição absoluta para voltar ao fluxo normal */
+        background-color: transparent; /* Remove fundo transparente */
+    }
+
+    footer {
+        font-size: 1em;
+    }
+}
